--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@mdx-js/react": "^1.6.1",
     "babel-plugin-styled-components": "^1.10.7",
     "gatsby": "^2.21.37",
+    "gatsby-background-image": "^1.1.1",
     "gatsby-image": "^2.4.4",
     "gatsby-plugin-manifest": "^2.4.5",
     "gatsby-plugin-mdx": "^1.2.9",
@@ -27,7 +28,8 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^6.0.0",
     "react-icons": "^3.10.0",
-    "styled-components": "^5.1.0"
+    "styled-components": "^5.1.0",
+    "typography": "^0.16.19"
   },
   "devDependencies": {
     "prettier": "2.0.5"
